--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "morgan": "^1.10.0",
-    "node-telegram-bot-api": "^0.61.0",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^4.4.1",
-    "typedi": "^0.10.0"
+    "node-telegram-bot-api": "^0.61.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -31,9 +28,12 @@
     "dotenv": "^16.0.3",
     "ngrok": "^4.3.3",
     "nodemon": "^2.0.22",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^4.4.1",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.4",
     "tsconfig-paths": "^4.1.2",
-    "typescript": "^5.0.2"
+    "typedi": "^0.10.0",
+    "typescript": "^5.0.3"
   }
 }
